--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@google/genai": "^1.31.0",
     "recharts": "^3.5.1",
     "firebase": "^12.6.0",
-    "@stripe/stripe-js": "^8.5.3"
+    "@stripe/stripe-js": "^8.5.3",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
