--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "recharts": "^3.5.1",
     "firebase": "^12.6.0",
     "@stripe/stripe-js": "^8.5.3",
-    "jspdf": "^2.5.1"
+    "jspdf": "^2.5.1",
+    "@sendgrid/mail": "^8.1.6"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
