--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "firebase": "^12.6.0",
     "@stripe/stripe-js": "^8.5.3",
     "jspdf": "^2.5.1",
-    "@sendgrid/mail": "^8.1.6"
+    "@sendgrid/mail": "^8.1.6",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
